--- a/css/styles.css
+++ b/css/styles.css
@@ -1,53 +1,94 @@
-body {
-  font-size: 16px;
-  font-family: 'Montserrat', sans-serif;
-  background-color: lightgray;
-}
-body h1 {
-	text-align: center;
-}
-#header-nav {
-  background-color: #f6b319;
-  border-radius: 0;
-  border: 0;
-}
-#nav-list {
-  margin-top: 20px;
-}
-#nav-list a {
-  color: #000000;
-  text-align: right;
-}
-.dropdown-menu {
-	text-align: center;
+
+.container-fluid{
+	margin: 0;
+	padding: 0;
 }
 
-.container-fluid {
-	background-color: aqua;
+.navbar{
+	border-radius: 0px;
+	background-color: rgba(0,0,0,0.8);
 }
-.navbar brand {
-	padding-top: 25px; 
 
+.navbar-brand{
+  font-size: 35px;
+  color: white;
+  padding-left: 25px;
 }
-.navbar brand h1 {
-	font-size: 2em;
-	color: 	black ;
+
+.navbar-brand:hover{
+	color: white;
+}
+
+.nav{
+	margin: 0;
+	padding: 0;
+}
+
+.navbar-nav{
+  font-size: 25px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-toggle{
+	border: 2px solid white;
+	margin-right: 25px;
+}
+
+.icon-bar{
+	background-color: white;
+}
+
+
+.main-title{
+  margin-bottom: 15px;
+  text-align: center;
+  color: rgb(8, 102, 102);
+  font-size: 50px;
+  font-family: "Montserrat", bold, serif;
+  font-weight: bold;
+}
+
+li{
+	box-sizing: border-box;
+	width: 100%;
+}
+
+.menu-item{
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	background-color: white;
+	border-bottom: 1px solid black;
+	color: black;
+	display: block;
+}
+
+.menu-item:hover{
+	background-color: rgba(0,0,0,0.9);
+	color: rgba(0,0,0,0.4);
+}
+
+
+
+.row{
+	margin: 20px;
+}
+
+.content-box{
+	margin: 20px;
+	width: auto;
+	height: auto;
+	color: black;
+	background-color: rgba(0,0,0,0.2);
+	font-family: "Montserrat", serif;
+	padding: 20px;
+}
+
+.item-name{
+	text-align: center;
+	font-size: 20px;
 	font-weight: bold;
-	margin-top: 0;
-	margin-bottom: 0;
-	font-family: 'Montserrat', sans-serif;
-}
-.navbar-brand a:hover, .navbar-brand a:focus {
-  text-decoration: none;
-}
-.centered {
-	text-align: center;
 }
 
-.paddingof {
-	padding: 0px 25px 0px 25px;
-}
-
-.jumbotron {
-	background-color: aqua;
-}
